update categorization in the backend and many bug fixes / UI improvements in the frontend.